Add RichTextDisplay component with DOMPurify for XSS protection and update package dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tiptap/react": "^2.23.1",
     "@tiptap/starter-kit": "^2.23.1",
     "daisyui": "^5.0.37",
+    "dompurify": "^3.2.6",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.8.1",
